# school-incident-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  build.sh  docker-compose.yaml  pyproject.toml  render.yaml  requirements.txt
app/: manage.py
app/incidents/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
app/incidents/migrations/: 0001_initial.py  0002_incidentreport_pdf_file.py  0003_incidentreport_created_by.py
app/incidents/templates/: base.html
app/incidents/templates/incidents/: incident_list.html  incident_report_form.html  incident_type_form.html  incident_type_list.html  student_form.html  student_list.html
app/school_incident_tracker/: asgi.py  settings.py  urls.py  wsgi.py
app/school_incident_tracker/db/: backup_db.py  restore_db.py
app/users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
app/users/templates/accounts/: login.html  register.html
app/users/templates/password_reset/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
app/users/templatetags/: bootstrap_filters.py
backend/: manage.py
backend/incidents/: admin.py  urls.py  utils.py  views.py
backend/incidents/templates/: base.html
backend/school_incident_tracker/: asgi.py  settings.py  urls.py
backend/school_incident_tracker/db/: backup_db.py
backend/users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
(+8 files in other folders)
