[tool.poetry]
name = "school-incident-tracker"
version = "0.1.0"
description = ""
authors = ["GersonMJL <gersonmjl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
psycopg2 = "^2.9.10"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"
django-widget-tweaks = "^1.5.0"
python-dotenv = "^1.0.1"
reportlab = "^4.2.5"
boto3 = "^1.35.65"
pytz = "^2024.2"
poetry-plugin-export = "^1.8.0"
whitenoise = "^6.8.2"
gunicorn = "^23.0.0"
dj-database-url = "^2.3.0"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
